--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@
     transition: width 0.2s ease-in-out; 
 }
 
-/* Body Styles */
+/* Body Style */
 body {
     background: #070922;
     width: 100vw;
