--- a/css/style.css
+++ b/css/style.css
@@ -395,7 +395,7 @@ body {
 
 /* Projects */
 .advancedSearch .project-image {background-image: url(/assets/projetos/advancedSearch.png);}
-.colorSwitch .project-image {background-image: url(/assets/projetos/colorSwitch.png);}
+.themeSwitch .project-image {background-image: url(/assets/projetos/themeSwitch.png);}
 .buttonSwitch .project-image {background-image: url(/assets/projetos/buttonSwitch.png);}
 
 /* Back Button */
